# PgGatherApp

./: .gitignore  README.md  mcp_stdio.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  continuous.py  crypto.py  db.py  jobs.py  main.py  mcp_server.py  param_recommend.py  report_view.py  repository.py  storage.py  templating.py
app/pipeline/: docker_runner.py  extract.py  health.py
app/routers/: compare.py  connections.py  health.py  reports.py  serve.py  timeline.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  compare.html  compare_picker.html  connection_form.html  connections.html  detail.html  library.html  timeline.html  timeline_detail.html  upload.html
tests/: conftest.py  test_crypto.py  test_docker_integration.py  test_extract.py  test_report_view.py  test_repository.py  test_routes.py
