[project]
name = "pggatherapp"
version = "0.1.0"
description = "Local web app for storing and browsing pg_gather PostgreSQL diagnostics reports"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "pydantic-settings",
    "beautifulsoup4",
    "cryptography",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["docker: requires Docker daemon and pg_src container (opt-in)"]
